--- a/css/style.css
+++ b/css/style.css
@@ -44,36 +44,39 @@ h2
 color: rgb(80, 80,80);
 transition: 1s;
 }
-input[type=button]
+/* button
 {
-    color:  rgb(0, 0, 0);
+    color:  rgb(255, 0, 0);
     background-color: rgb(80, 80,80);
     box-shadow: 0 4px 6px  rgb(80, 80,80) ;
     
-}
-input[type=button]:hover
+} */
+.about
 {
-    transform: scale(1.5);
-    transition: 1s;
-    color: red;
-    background-color: black;
-     box-shadow: 0 4px 6px black;
+    /* transform: scale(1.5);
+    transition: 1s; */
+    color: rgb(255, 255, 255);
+    background-color: rgb(0, 0, 0);
+     /* box-shadow: 0 4px 6px rgb(255, 0, 0); */
+     padding: 2% 4%;
+     text-align: center;
+     display: inline-block;
+     border: solid;
+     border-radius: 2%;
+     
 
 }
-input[type=button]:active
+.links
+{
+    /* transform: scale(1.5);
+    transition: 1s */
+    
+}
+button
 {
     transform: scale(.9);
 }
-link
-{
-color: rgb(80, 80, 80);
-}
-link:hover
-{
-color: red;
-transition: 1s;
 
-}
 p:hover
 {
     color: red;
