--- a/css/style.css
+++ b/css/style.css
@@ -66,11 +66,17 @@ transition: 1s;
      
 
 }
-.links
+.Links
 {
     /* transform: scale(1.5);
     transition: 1s */
-    
+    color: rgb(255, 255, 255);
+    background-color: rgb(0, 0, 0);
+     padding: 2% 4%;
+     text-align: center;
+     display: inline-block;
+     border: solid;
+     border-radius: 2%;
 }
 button
 {
@@ -85,4 +91,18 @@ p:hover
 p
 {
     color:rgb(80, 80, 80);
+}
+
+a:focus
+{
+    color: rgb(255, 255, 255)
+}
+a
+{
+    color: rgb(80, 80, 80);
+}
+a:hover
+{
+    color: red;
+    transition: 1s;
 }
