--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,22 @@
 
 h1{
     color: rgb(102, 0, 0);
-    border:  solid red;
+    border:  ridge red;
     text-shadow: white;
+    text-align: center;
 }
 h2{
-    color: rgb(68, 68, 68);
+    color: rgb(80, 80, 80);
     border:  dotted white;
+    text-align: center;
 }
 
 body{
     background-color: rgb(0, 0, 0);
-    background-image:  url(FTDalekTroyd.jpg) ;
+    background-image:  url(images/FTDalekTroyd.jpg) ;
     background-size: cover;
     background-repeat: no-repeat;
-
+ 
 }
 
 p
@@ -53,30 +55,38 @@ transition: 1s;
 } */
 .about
 {
-    /* transform: scale(1.5);
-    transition: 1s; */
-    color: rgb(255, 255, 255);
+   
+    color: rgb(255, 0, 0);
     background-color: rgb(0, 0, 0);
-     /* box-shadow: 0 4px 6px rgb(255, 0, 0); */
-     padding: 2% 4%;
-     text-align: center;
-     display: inline-block;
-     border: solid;
-     border-radius: 2%;
+    padding: 2% 4%;
+    text-align: center;
+    display: inline-block;
+    border: solid;
+    border-radius: 2%;
      
 
 }
 .Links
 {
-    /* transform: scale(1.5);
-    transition: 1s */
+
     color: rgb(255, 255, 255);
     background-color: rgb(0, 0, 0);
-     padding: 2% 4%;
-     text-align: center;
-     display: inline-block;
-     border: solid;
-     border-radius: 2%;
+    padding: 2% 4%;
+    text-align: center;
+    display: inline-block;
+    border: solid;
+    border-radius: 2%;
+}
+.Blog
+{
+    
+    color: rgb(117, 0, 121);
+    background-color: rgb(0, 0, 0);
+    padding: 2% 4%;
+    text-align: center;
+    display: inline-block;
+    border: solid;
+    border-radius: 2%;
 }
 button
 {
@@ -105,4 +115,44 @@ a:hover
 {
     color: red;
     transition: 1s;
+}
+h3
+{
+color: rgb(80, 80, 80);
+
+}
+
+h3:hover
+{
+    color: red;
+    transition: 1s;
+}
+.FTDT
+{
+    color: red;
+    border: dotted rgb(80, 80, 80);
+    text-align: center;
+}
+
+.blog
+{
+    color: red;
+    text-align: center;
+    border: solid rgb(80, 80, 80);
+}
+.DTI
+{
+    display: flex;
+    justify-content: center;
+}
+#DTI
+{
+width: 50%;
+height: auto;
+
+}
+.DTB
+{
+    color: red;
+    border: 0cap;
 }
